# tripleo-ansible

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .yamllint  README.rst  ansible-requirements.txt  ansible-test-env-podman.rc  ansible-test-env.rc  ansible.cfg  bindep.txt  cleanup-docker.yml  constraints.txt  fetch-logs.yml  molecule-requirements.txt  requirements.txt  requirements.yml  restart-service.yml  role-addition.yml  roles  setup.cfg  test-requirements.txt  tox.ini
.ansible-lint_rules/: RoleNames.py
.config/molecule/: Dockerfile.j2  config.yml  config_podman.yml
_skeleton_role_/defaults/: main.yml.j2
_skeleton_role_/handlers/: main.yml
_skeleton_role_/meta/: main.yml.j2
_skeleton_role_/molecule/default/: Dockerfile.j2  converge.yml.j2  molecule.yml  playbook.yml.j2  prepare.yml
_skeleton_role_/tasks/: main.yml  main.yml.j2
_skeleton_role_/vars/: main.yml  main.yml.j2
ci-scripts/: ansible-lint.sh
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  contributing_roles.rst  index.rst  installation.rst  modules.rst  roles.rst  standalone-roles-playbooks.rst  usage.rst
doc/source/_exts/: ansible-autodoc.py  ansible-module-autodoc.py
doc/source/contributor/: contributing.rst
doc/source/modules/: action-package.rst  action-tripleo_host_prep.rst  calllback-json_error.rst  modules-ceph_spec.rst  modules-ceph_spec_bootstrap.rst  modules-container-puppet-config.rst  modules-metalsmith_instances.rst  modules-paunch.rst  modules-podman_container.rst  (+43 more)
operations/: docker-cleanup.yml  fetch-logs.yml
releasenotes/notes/: Add-Unbound-forwarder-support-9bdc3ef54104ff30.yaml  Add-tripleo-unbound-role-fb072294f074adf1.yaml  add-ansible-args-to-test-commands-e6b14d561af5de7d.yaml  add-octavia-log-offload-protocol-parameter-a94d54c405f55096.yaml  add-tripleo_ovn_cluster-role-f70990a8282d722e.yaml  add_designate_bind_pool_config-1eda0fd001af1308.yaml  add_save_swift_parameter_to_undercloud_backup-9cf04020d91bb0c1.yaml  add_tripleo_frr_role-793d53d11eded3bf.yaml  bug-1849393-fix-retrieval-of-storage-nfs-params-5f92d7999c36ef05.yaml  bug-1978356-45021b2a7fb8304b.yaml  bug-1978360-0c9d6440e2788838.yaml  bug-1978362-e2b878f5f6c61298.yaml  check-installed-packages-before-invoking-package-module-ede8b9c3e4944a0b.yaml  clean-endpoints-cca5478129f0506d.yaml  clean-iptables-967b9dda091a6535.yaml  configure-podman-cni-788ffa30083acbb5.yaml  create-new-loadbalancer-flavor-with-multivcpu-support-5aa38d534360d021.yaml  disable-cloud-init-network-config-after-tripleo_network_config-1fea430985e1a3cd.yaml  docker_enable_vfs-c8b41b02111341df.yaml  fix_nvdimm_ns_check-cb0837b5dbf40ab7.yaml  fix_ssh-known-hosts-22738bc60fdc2f62.yaml  fix_ssh-known-hosts-2520b9d6f67458b7.yaml  kernelargs-playbook-d158ff63fa5fbb5a.yaml  net-conf-schema-num_dpdk_interface_rx_queues-4a37e4fc3957ed9a.yaml  network-update-var-e5082d1bed8d8cde.yaml  openvswitch-dpdk-playbook-4d7fa71529c74e3f.yaml  paunch_removal-368245325e2964a2.yaml  podman-cni-configurable-6d810fabcbd1da87.yaml  podman_heathcheck_v2-b3d4db0aeaf03519.yaml  remove-baremetal_register_or_update_nodes-module-638e42682e08bc19.yaml  remove-stack-action-0aa6c9d7927bf2d3.yaml  support-ipv6-lb-mgmt-net-7f7b1366a1e54d79.yaml  tripleo-kernel-hugepages-6884a03ab77c0922.yaml  tripleo-podman-enable_socket-f93bdaa47f4b01d9.yaml
releasenotes/source/: conf.py  index.rst
scripts/: bindep-install  detect-broken-symlinks.sh  run-local-test  tripleo-standalone-vars
tests/: conftest.py  hosts.ini  test_molecule.py
tools/: test-setup.sh
tripleo_ansible/: ansible-collections-requirements.yml  ansible-role-requirements.yml  container-cleanup.yml  requirements.yml
tripleo_ansible/inventory/: 01-site  02-computes  03-tripleo
tripleo_ansible/playbooks/: ceph-admin-user-disable.yml  ceph-admin-user-playbook.yml  ceph-backup.yaml  ceph-chrony.yaml  ceph-set-hostname.yaml  ceph-update-ganesha.yml  ceph.yaml  ceph_deactivate_mds.yaml  cephadm.yml  cli-baremetal-bios-apply.yaml  cli-baremetal-bios-reset.yaml  cli-baremetal-clean.yaml  cli-baremetal-configure.yaml  cli-baremetal-introspect.yaml  cli-baremetal-raid.yaml  cli-config-download-export.yaml  cli-config-download.yaml  cli-container-image-prepare.yaml  cli-container-registry-config.yaml  cli-create-deployment-plan.yaml  cli-deploy-deployment-plan.yaml  cli-deployed-ceph.yaml  cli-derive-local-hci-parameters.yml  cli-derive-parameters.yaml  cli-enable-ssh-admin.yaml  cli-generate-containerfile.yaml  cli-generate-overcloudrc.yaml  cli-grant-local-access.yaml  cli-hosts-file-config.yaml  cli-overcloud-backup-cron.yaml  cli-overcloud-backup.yaml  cli-overcloud-conf-ironic.yaml  cli-overcloud-delete.yaml  cli-overcloud-kernel-ddp-pkg.yaml  cli-overcloud-network-extract.yaml  cli-overcloud-network-provision.yaml  cli-overcloud-network-unprovision.yaml  cli-overcloud-network-vip-extract.yaml  cli-overcloud-network-vip-provision.yaml  cli-overcloud-network-vip-unprovision.yaml  (+52 more)
tripleo_ansible/roles/: backup-and-restore  login-defs  octavia-controller-check  octavia-controller-config  octavia-controller-post-config  octavia-overcloud-config  octavia-undercloud  tripleo-bootstrap  tripleo-cellv2  tripleo-ceph-common  tripleo-ceph-fetch-dir  tripleo-ceph-run-ansible  tripleo-ceph-uuid  tripleo-ceph-work-dir  tripleo-clients-install  tripleo-config  tripleo-container-image-prepare  tripleo-container-manage  tripleo-container-rm  tripleo-container-stop  tripleo-container-tag  tripleo-create-admin  tripleo-docker-rm  tripleo-firewall  tripleo-hieradata  tripleo-hosts-entries  tripleo-image-serve  tripleo-kernel  tripleo-keystone-resources  tripleo-module-load  tripleo-nova-image-cache  tripleo-ovs-dpdk  tripleo-packages  tripleo-persist  tripleo-podman  tripleo-ptp  tripleo-puppet-cache  tripleo-securetty  tripleo-ssh-known-hosts  tripleo-sshd  (+5 more)
tripleo_ansible/tests/: base.py  stubs.py
zuul.d/: base.yaml  jobs.yaml  layout.yaml  molecule.yaml
zuul.d/playbooks/: directories.yml  enable-fips.yml  pre.yml  run-local.yml  run-role-addition.yml  run-tox.yml  run.yml
(+1970 files in other folders)
