[metadata]
name = tripleo-ansible
summary = Ansible assets for the TripleO project.
description-file =
    README.rst

author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/tripleo-ansible
classifier =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/tripleo-playbooks/ = tripleo_ansible/playbooks/*
    share/ansible/plugins/ = tripleo_ansible/ansible_plugins/*
    share/ansible/roles/ = tripleo_ansible/roles/*
    share/ansible/roles/tripleo_docker_rm/ = tripleo_ansible/roles/tripleo_docker_rm/*
    # TODO(cloudnull): Remove this when the role rename is complete
    share/ansible/roles/tripleo-config = tripleo_ansible/roles/tripleo_config/*
    share/ansible/roles/tripleo-clients-install = tripleo_ansible/roles/tripleo_clients_install/*
    share/ansible/roles/tripleo-timezone = tripleo_ansible/roles/tripleo_timezone/*
    share/ansible/roles/octavia-overcloud-config = tripleo_ansible/roles/octavia_overcloud_config/*
    share/ansible/roles/tripleo-cellv2 = tripleo_ansible/roles/tripleo_cellv2/*
    share/ansible/roles/tripleo-securetty = tripleo_ansible/roles/tripleo_securetty/*
    share/ansible/roles/tripleo-bootstrap = tripleo_ansible/roles/tripleo_bootstrap/*
    share/ansible/roles/tripleo-create-admin = tripleo_ansible/roles/tripleo_create_admin/*
    share/ansible/roles/tripleo-ceph-uuid = tripleo_ansible/roles/tripleo_ceph_uuid/*
    share/ansible/roles/tripleo-puppet-cache = tripleo_ansible/roles/tripleo_puppet_cache/*
    share/ansible/roles/tripleo-sshd = tripleo_ansible/roles/tripleo_sshd/*
    share/ansible/roles/tripleo-container-image-prepare = tripleo_ansible/roles/tripleo_container_image_prepare/*
    share/ansible/roles/tripleo-podman = tripleo_ansible/roles/tripleo_podman/*
    share/ansible/roles/login-defs = tripleo_ansible/roles/login_defs/*
    share/ansible/roles/tripleo-container-rm = tripleo_ansible/roles/tripleo_container_rm/*
    share/ansible/roles/tripleo-ceph-work-dir = tripleo_ansible/roles/tripleo_ceph_work_dir/*
    share/ansible/roles/tripleo-kernel = tripleo_ansible/roles/tripleo_kernel/*
    share/ansible/roles/tripleo-ceph-fetch-dir = tripleo_ansible/roles/tripleo_ceph_fetch_dir/*
    share/ansible/roles/tripleo-keystone-resources = tripleo_ansible/roles/tripleo_keystone_resources/*
    share/ansible/roles/tripleo-hosts-entries = tripleo_ansible/roles/tripleo_hosts_entries/*
    share/ansible/roles/tripleo-image-serve = tripleo_ansible/roles/tripleo_image_serve/*
    share/ansible/roles/tripleo_docker_rm = tripleo_ansible/roles/tripleo-container-rm/*
    share/ansible/roles/tripleo-firewall = tripleo_ansible/roles/tripleo_firewall/*
    share/ansible/roles/tripleo-module-load = tripleo_ansible/roles/tripleo_module_load/*
    share/ansible/roles/tripleo-ptp = tripleo_ansible/roles/tripleo_ptp/*
    share/ansible/roles/octavia-controller-config = tripleo_ansible/roles/octavia_controller_config/*
    share/ansible/roles/tripleo-container-manage = tripleo_ansible/roles/tripleo_container_manage/*
    share/ansible/roles/tripleo-packages = tripleo_ansible/roles/tripleo_packages/*
    share/ansible/roles/tripleo-ssh-known-hosts = tripleo_ansible/roles/tripleo_ssh_known_hosts/*
    share/ansible/roles/tripleo-persist = tripleo_ansible/roles/tripleo_persist/*
    share/ansible/roles/tripleo-hieradata = tripleo_ansible/roles/tripleo_hieradata/*
    share/ansible/roles/tripleo-ceph-run-ansible = tripleo_ansible/roles/tripleo_ceph_run_ansible/*
    share/ansible/roles/tripleo-transfer = tripleo_ansible/roles/tripleo_transfer/*
    share/ansible/roles/tripleo-container-stop = tripleo_ansible/roles/tripleo_container_stop/*
    share/ansible/roles/tripleo-ovs-dpdk = tripleo_ansible/roles/tripleo_ovs_dpdk/*
    share/ansible/roles/octavia-controller-post-config = tripleo_ansible/roles/octavia_controller_post_config/*
    share/ansible/roles/tripleo-container-tag = tripleo_ansible/roles/tripleo_container_tag/*
    share/ansible/roles/tripleo-systemd-wrapper = tripleo_ansible/roles/tripleo_systemd_wrapper/*
    share/ansible/roles/tripleo-nova-image-cache = tripleo_ansible/roles/tripleo_nova_image_cache/*
    share/ansible/roles/tripleo-validations-package = tripleo_ansible/roles/tripleo_validations_package/*
    share/ansible/roles/backup-and-restore = tripleo_ansible/roles/backup_and_restore/*
    share/ansible/roles/tripleo-upgrade-hiera = tripleo_ansible/roles/tripleo_upgrade_hiera/*
    share/ansible/roles/tripleo-ceph-common = tripleo_ansible/roles/tripleo_ceph_common/*
    share/ansible/roles/octavia-undercloud = tripleo_ansible/roles/octavia_undercloud/*
    # TODO(cloudnull): Remove this when the role rename is complete

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
