[metadata]
name = tripleo-ansible
summary = Ansible assets for the TripleO project.
description_file =
    README.rst

author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/tripleo-ansible
classifier =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/tripleo-playbooks/ = tripleo_ansible/playbooks/*
    share/ansible/plugins/ = tripleo_ansible/ansible_plugins/*
    share/ansible/roles/ = tripleo_ansible/roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
